# atlas-public

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  app.py  manifest.json  pyproject.toml
atlas/: __init__.py  cli.py  models.py  pipeline.py  sonar.py
release-reports/: ATLAS_v0.1.0_Technical_Report.md  ATLAS_v0.2.0_Technical_Report.md
scripts/: upload_to_hf.py
